tests/semantic/fail/function-wrong-arg-count-1.tiger
let
      function f() : int = 0
in
      f(0) 
end
